# pm4ngs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  conda-requirements.yaml  cookiecutter.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-app.yml  python-package.yml  python-publish.yml
docker/: Dockerfile-RNASeq-DGA  Dockerfile-RNASeq-DGA-Jupyter  README.md
docker/aws/transannot/: Dockerfile  job-definition.json  pipeline.sh
docker/gcp/rnaseq/: script.sh
docker/gcp/transannot/: Dockerfile  pipeline.json
docs/: Makefile
docs/source/: background_information.rst  conf.py  cookiecutter_json.rst  det_bind_chipexo.rst  diff_gene_exp_rnaseq.rst  factors_file.rst  index.rst  installation.rst  jupyter_env.rst
docs/source/_static/: theme_overrides.css
docs/source/cwl/: chip-seq-alignment.rst  differential_binding-DiffBind.rst  meme-motif.rst  peak-caller-MACE.rst  peak-caller-MACS2.rst  rnaseq-GO-enrichment-workflow.rst  rnaseq-dga-workflow.rst  rnaseq-star-aligner-workflow.rst  rnaseq-tpmcalculator-qc-workflow.rst  sra_workflow.rst  trimmomatic.rst
docs/source/envs/: installation.rst  jupyter_env.rst
docs/source/extra/: cookiecutter_json.rst  factors_file.rst
docs/source/pipelines/: bwaIndexes.rst  chipexoPipeline.rst  chipseqPipeline.rst  createBEDFromGTF.rst  creatingNewPipeline.rst  genomes.rst  installation.rst  pm4ngsgcp.rst  rnaseqDGAPipeline.rst  sampleSheet.rst  starIndexes.rst  transcriptomeAnnotationPipeline.rst  ubuntu.rst  utils.rst  windowssl.rst
docs/source/workflows/: det_bind_chipexo.rst  diff_bind_event_chipseq.rst  diff_gene_exp_rnaseq.rst
examples/: chipexo-single.yaml  chipseq-paired.yaml  chipseq-single.yaml  rnaseq-paired.yaml  rnaseq-single.yaml  rnaseq-sra-paired.yaml  rnaseq-sra-single.yaml  transcriptome_annot.yaml
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: base.txt  test.in  test.txt
src/pm4ngs/: __init__.py  cookiecutter.py  main.py  taxonomy.py  utils.py
tests/: test_pm4ngs.py
{{cookiecutter.project_name}}/: README.md  index.html
{{cookiecutter.project_name}}/config/: chipexo.yaml  chipseq.yaml  init.py  rnaseq.yaml  trans-annot.yaml
{{cookiecutter.project_name}}/notebooks/: 00 - Project Report.ipynb  01 - Pre-processing QC.ipynb  01.ipynb  02 - Samples trimming.ipynb  02.ipynb  03 - Alignments.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb
{{cookiecutter.project_name}}/requirements/: python.txt
(+27 files in other folders)
