[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pm4ngs"
version = "0.0.0"
description = "PM4NGS generates a standard organizational structure for Next Generation Sequencing (ngs) data analysis"
license = "Public Domain"
authors = ["Vera Alvarez, Roberto <veraalva@ncbi.nlm.nih.gov>"]
maintainers = ["Vera Alvarez, Roberto <veraalva@ncbi.nlm.nih.gov>"]
readme = "README.md"
homepage = "https://github.com/ncbi/pm4ngs"
repository = "https://github.com/ncbi/pm4ngs"
documentation = "https://pm4ngs.readthedocs.io/"
keywords = ["Biocontainers", "Bioinformatics", "NGS", "Genomics"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

packages = [
    { include = "pm4ngs", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bioconda2biocontainer = "*"
biopython = "*"
cookiecutter = "*"
cwltool = "*"
docker = "*"
GitPython = "*"
goenrichment = "*"
jupyter = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
pdf2image = "*"
PyYAML = "*"
requests = "*"
scipy = "*"
seaborn = "*"
statsmodels = "*"
urllib3 = "*"
xmltodict = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"


[tool.poetry.scripts]
pm4ngs-server = "pm4ngs.main:start_server_main"
pm4ngs-create = "pm4ngs.main:create_project"
pm4ngs-rnaseq = "pm4ngs.main:rnaseq"
pm4ngs-rnaseq-demo = "pm4ngs.main:rnaseq_demo"
pm4ngs-chipseq = "pm4ngs.main:chipseq"
pm4ngs-chipseq-demo = "pm4ngs.main:chipseq_demo"
pm4ngs-chipexo = "pm4ngs.main:chipexo"
pm4ngs-chipexo-demo = "pm4ngs.main:chipexo_demo"
pm4ngs-transcriptome-annotation = "pm4ngs.main:transcriptome_annotation"
pm4ngs-transcriptome-annotation-demo = "pm4ngs.main:transcriptome_annotation_demo"

[tool.poetry.urls]
Tracker = "https://github.com/ncbi/pm4ngs/issues"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
